move mega-theorem to A.0

--- a/powerops.tex
+++ b/powerops.tex
@@ -8,7 +8,14 @@ Our goal in this Appendix is to give a tour of the interaction of the $\sigma$--
 
 As far as we are concerned, $E_\infty$ ring spectra appear in order to solve the following problem: given two ring spectra $R$ and $S$ in the homotopy category, the set of homotopy classes of ring maps $\CatOf{RingSpectra}(R, S)$ forms a subset of the set of all homotopy classes $[R, S] = \pi_0 \CatOf{Spectra}(R, S)$, selected by a homomorphism condition.  There is no meaningful way to enrich this to a \emph{space} of ring spectrum maps from $R$ to $S$, which inhibits us from understanding an obstruction theory for ring spectra, i.e., approximating $R$ by ``nearby'' ring spectra $R'$ in a way that relates $\CatOf{RingSpectra}(R, S)$ and $\CatOf{RingSpectra}(R', S)$ by a fiber sequence.
 
-The extra data that accomplishes this mapping space feat turns out to be an explicit naming of the homotopies controlling the associativity and commutativity of the ring spectrum multiplication, which are subject to highly intricate compatibility conditions.\footnote{This is rather analogous to the extra data required on a \emph{space}, beyond just a multiplication, which allows one to use the bar construction to assemble a delooping.}  Again, rather than spell this out, it suffices for our purposes to say that there is such a notion of a structured ring spectrum that begets a mapping space between two such, as well as forgetful map down to ring spectra in the homotopy category with factorizations expressing these associativity and commutativity relations.  Specifically, recall the following definition from the discussion in \Cref{QuillenPowerOpnsSection}:
+The extra data that accomplishes this mapping space feat turns out to be an explicit naming of the homotopies controlling the associativity and commutativity of the ring spectrum multiplication, which are subject to highly intricate compatibility conditions.\footnote{This is rather analogous to the extra data required on a \emph{space}, beyond just a multiplication, which allows one to use the bar construction to assemble a delooping.}  Again, rather than spell this out, it suffices for our purposes to say that there is such a notion of a structured ring spectrum that begets a mapping space between two such.  Additionally, we record the following omnibus theorem as indication that this program overlaps with the one we have been describing already:
+\begin{theorem}
+\citeme{this is a mega-theorem}
+\todo{This is the first mention of $\tmf$.  Give a description of $\tmf$, $\TMF$, and $\Tmf$ in terms of $\moduli{ell}$.}
+The classical $K$--theories $KU$ and $KO$, the Eilenberg--Mac Lane spectra $HR$, the Morava $E$--theories $E_\Gamma$, their fixed point spectra, the Thom spectra arising from the $J$--homomorphism (including $MO$, $MSO$, $M\Spin$, $M\String$, $MU$, $MSU$, and $MU[6, \infty)$), the spectra $\TMF$, $\Tmf$, and $\tmf$ are all $E_\infty$--ring spectra.\footnote{Notably, the Morava $K$--theories are \emph{not} $E_\infty$ rings at finite heights.} \qed
+\end{theorem}
+
+There is also a forgetful map down to ring spectra in the homotopy category, which come equipped with extra with factorizations expressing these associativity and commutativity relations.  Specifically, recall the following definition from the discussion in \Cref{QuillenPowerOpnsSection}:
 
 \begin{definition}[{cf.\ \Cref{QuillenPowerOpnsSection}}]
 \citeme{BMMS}
@@ -202,7 +209,7 @@ where the bottom arrow sends such a homomorphism to its image divisor.  This map
 (BC_p)_E^{/\Tr} \arrow{r} \arrow{u} & (BC_p)_E \arrow{u} \arrow{ru}.
 \end{tikzcd}
 \end{center}
-The effect of killing the transfer ideal in $(BC_p)_E$ is to force the image divisor to be a subdivisor of $\CP^\infty_E[p]$.\todo{Explain why.}  Finally, passing to $B\Sigma_p$ from $BC_p$ exactly destroys the choice of generator of $\Z/p$, i.e., it encodes passing from the homomorphism to the image divisor.  This winds up giving an isomorphism \[(B\Sigma_p)_E^{/\Tr} \cong \Sub_p \CP^\infty_E,\] where $\Sub_p$ denotes the scheme of subgroup divisors of rank $p$.
+The effect of killing the transfer ideal in $(BC_p)_E$ is to force the image divisor to be a subdivisor of $\CP^\infty_E[p]$\todo{Explain why.}, and this subscheme of homomorphisms is written $\Level(\Z/p, \CP^\infty_E)$.  Finally, passing to $B\Sigma_p$ from $BC_p$ exactly destroys the choice of generator of $\Z/p$, i.e., it encodes passing from the homomorphism to the image divisor.  This winds up giving an isomorphism \[(B\Sigma_p)_E^{/\Tr} \cong \Sub_p \CP^\infty_E,\] where $\Sub_p$ denotes the scheme of subgroup divisors of rank $p$.
 \end{example}
 
 In light of this example, there are several further variants of the $E_\infty$ context which one might consider:
@@ -236,6 +243,10 @@ An important piece of intuition about the schemes $\Level(A^*, \CP^\infty_E)$ is
 
 \subsection*{Isogenies and the Lubin--Tate moduli}
 
+In this subsection, we seek an algebraic comparison of the different sorts of contexts previously considered.
+
+
+
 % Describe the topological effect of a power operation on $\CP^\infty_E$
 % Isogenies of formal curves
 % Weierstrass preparation
@@ -243,6 +254,29 @@ An important piece of intuition about the schemes $\Level(A^*, \CP^\infty_E)$ is
 % Isogenies versus subgroups (+ isomorphisms), the (F-)isogenies pile
 % The regular representation, Strickland’s theorems
 % The Drinfel’d ring and Galois descent
+
+
+
+
+% Here's a definition of an isogeny.  Weierstrass preparation can be phrased as saying that a Weierstrass map is a coordinate change and a standard isogeny.
+% \begin{definition}[{\cite[Definition 5.17]{StricklandFSFG}}]
+% Take $C$ and $D$ to be formal curves over $X$.  A map $f: C \to D$ is an \textit{isogeny} when the induced map $C \to C \times_X D$ exhibits $C$ as a divisor on $C \times_X D$ as $D$--schemes.
+% \end{definition}
+% \todo{Be sure to compare this definition with the usual one for formal groups: surjections with finite cokernel.  These are easy to come up with lots of examples for!  (Don't ditch this definition, though, since it's the one that lets you prove something about Weierstrass preparation geometrically.)}
+
+
+
+
+% In fact, every map in positive characteristic can be factored as a coordinate change and an isogeny, which is a weak form of preparation.
+
+
+% Lubin's finite quotients of formal groups. (Interaction with the Lubin--Tate moduli problem?  Or does this belong in the next day?)
+
+
+% Write out isogenies of the additive formal group, note that you just get the unstable Steenrod algebra again.  This is a remarkable accident.
+
+
+% Push and pull maps for divisor schemes
 
 
 
@@ -322,31 +356,6 @@ Barry's description of the image of \[E_\infty(A, B) \to \CatOf{Spaces}(\Loops^\
 Prop 8.3 in ``Character of the Total Power Operation'' provides an algebro-geometric proof of something in AHS04, using the fact that for $R$ a nice complete local ring and $G$, $G'$ $p$--divisible groups over $R$, there is an injection \[\Isog_R(G, G') \into \Isog_{R/\m}(G, G').\]
 
 \todo[color=red,inline]{Matt in and before Theorem 3.3.2 describes the ring $D_k$ as the \emph{image} of the localization map $E_n(B\Lambda_k) \to S^{-1} E_n(B\Lambda_k)$ rather than as the whole target.  Why??  He cites HKR for this, but the citation is meaningless because the theorem numbering scheme is so old.  Ah, comparing with Lemma 3.3.3 yields a clue: $D_k$ has a universal property as it sits under $E_n$, rather than under $E_n(B\Lambda_k)$...}
-
-
-
-------
-
-
-Here's a definition of an isogeny.  Weierstrass preparation can be phrased as saying that a Weierstrass map is a coordinate change and a standard isogeny.\citeme{Definition 5.17 of FSFG}
-\begin{definition}
-Take $C$ and $D$ to be formal curves over $X$.  A map $f: C \to D$ is an \textit{isogeny} when the induced map $C \to C \times_X D$ exhibits $C$ as a divisor on $C \times_X D$ as $D$--schemes.
-\end{definition}
-\todo{Be sure to compare this definition with the usual one for formal groups: surjections with finite cokernel.  These are easy to come up with lots of examples for!  (Don't ditch this definition, though, since it's the one that lets you prove something about Weierstrass preparation geometrically.)}
-
-
-
-
-In fact, every map in positive characteristic can be factored as a coordinate change and an isogeny, which is a weak form of preparation.
-
-
-Lubin's finite quotients of formal groups. (Interaction with the Lubin--Tate moduli problem?  Or does this belong in the next day?)
-
-
-Write out isogenies of the additive formal group, note that you just get the unstable Steenrod algebra again.  This is a remarkable accident.
-
-
-Push and pull maps for divisor schemes
 
 
 ----
@@ -769,14 +778,7 @@ take cofiber sequences in (finite) $X$ to fiber sequences of spectra. I think th
 
 \section{Orientations by \texorpdfstring{$E_\infty$}{Eoo} maps}\label{JuvitopTalkSection}
 
-A more modern take on the story of the $\sigma$--orientation passes through the algebraic geometry of $E_\infty$--ring spectra, which are the homotopically coherent analogues of commutative ring objects that one finds in the $\infty$--category $\CatOf{Spectra}$.  Our reward for grappling with this will be the modularity of the $\String$--orientation, enriching \Cref{WittensTheoremForBU6} to the real setting.  Essentially all of the ring spectra discussed in this book have incarnations as $E_\infty$--rings:
-\begin{theorem}
-\citeme{this is a mega-theorem}
-\todo{This is the first mention of $\tmf$.  Give a description of $\tmf$, $\TMF$, and $\Tmf$ in terms of $\moduli{ell}$.}
-The classical $K$--theories $KU$ and $KO$, the Eilenberg--Mac Lane spectra $HR$, the Morava $E$--theories $E_\Gamma$, their fixed point spectra, the Thom spectra arising from the $J$--homomorphism (including $MO$, $MSO$, $M\Spin$, $M\String$, $MU$, $MSU$, and $MU[6, \infty)$), the spectra $\TMF$, $\Tmf$, and $\tmf$ are all $E_\infty$--ring spectra.\footnote{Notably, the Morava $K$--theories are \emph{not} $E_\infty$ rings at finite heights.} \qed
-\end{theorem}
-
-A great deal of classical commutative algebra can be lifted into this new setting, including a particular functor \[\gl_1\co E_\infty\CatOf{RingSpectra} \to \CatOf{Spectra}.\]  This functor derives its name from two compatible sources: for one, its underlying infinite loopspace is the construction $GL_1$ described in \Cref{LectureThomSpectra}; and secondly, it participates in an adjunction
+A more modern take on the story of the $\sigma$--orientation passes directly through the algebra of $E_\infty$--ring spectra.  Though technically intensive, our reward for grappling with this will be the modularity of the $\String$--orientation, enriching \Cref{WittensTheoremForBU6} to the real setting.  Luckily, most of the basic ideas are classically familiar, centering on a particular functor \[\gl_1\co E_\infty\CatOf{RingSpectra} \to \CatOf{Spectra}.\]  This functor derives its name from two compatible sources: for one, its underlying infinite loopspace is the construction $GL_1$ described in \Cref{LectureThomSpectra}; and secondly, it participates in an adjunction
 \begin{center}
 \begin{tikzcd}[column sep=4em]
 \CatOf{ConnectiveSpectra} \arrow[shift left=0.3\baselineskip, "\Susp^\infty_+ \Omega^\infty"]{r} & E_\infty\CatOf{RingSpectra} \arrow[shift left=0.3\baselineskip, "\gl_1"]{l}
@@ -1072,7 +1074,7 @@ The case of the orientation $M\String \to \tmf$ has all of the same trappings, b
     \item Analyze the homotopy type of $\widehat L_1 \tmf$ and compare it to that of $KO$.  This lets us use another universal coefficient theorem to lift our description of $KO^* KO$ as $KO^*$--valued measures to $\widehat L_1 \tmf^* KO$ as $\widehat L_1 \tmf^*$--valued measures.
     \item The homotopy type of $\widehat L_2 \tmf$ is ``naively irrelevant'' in the chromatic fracture square: maps $b\Spin \to \widehat L_2 \tmf$ factor through $\widehat L_2 b\Spin = \widehat L_2 KO_p = 0$.
     \item However, the logarithm's presence in the chromatic fracture square $\widehat L_1 \tmf \to \widehat L_1 \widehat L_2 \tmf$ has a real effect that must be understood.  This is not easy: the height $2$ logarithm is not so accessible, so this requires a real understanding of power operations in $\tmf$.
-    \item You also have to calculate the Miller invariant associated to $\tmf$.  In the case of $E_\infty(M\Spin, KO)$, one uses the $A_\infty$ orientation $MU \to KU$, as well as an understanding of the maps $\pi_* BU \to \pi_* BO$ and $\pi_* KO \to \pi_* KU$.  The case of $E_\infty(M\String, \tmf)$ is similar: one constructs an $A_\infty$ lift of the $\sigma$--orientation $MU[6, \infty) \to K^{\Tate}$, as well as an understanding of the maps $\pi_* BU[6, \infty) \to \pi_* B\String$ and $\pi_* \tmf \to \pi_* K^{\Tate}$.
+    \item You also have to calculate the Miller invariant associated to $\tmf$.  In the case of $E_\infty(M\Spin, KO)$, one uses the $A_\infty$ orientation $MU \to KU$, as well as an understanding of the maps $\pi_* BU \to \pi_* BO$ and $\pi_* KO \to \pi_* KU$.  The case of $E_\infty(M\String, \tmf)$ is similar: one constructs an $A_\infty$ lift of the $\sigma$--orientation $MU[6, \infty) \to K^{\Tate}$, as well as an understanding of the maps $\pi_* BU[6, \infty) \to \pi_* B\String$ and $\pi_* \tmf \to \pi_* K^{\Tate}$.\todo{I think the conclusion here is that you have to be a $q$--expansion of a modular form (of a particular weight) with constant term a Bernoulli number and every other coefficient integral.  Mike told me that this (or something like this) fully determines these generalized Eisenstein series; that's nice.}
     \item Finally, you have to ramp up the algebraic part of the calculation by identifying the analogues of the Mazur moments in $\pi_* \widehat L_1 \tmf$.  These turn out to be normalized Eisenstein series.
 \end{enumerate}
 
@@ -1086,3 +1088,21 @@ Some more open questions about this can be found in
 \end{remark}
 
 \todo{$KU$ is known to have a unique $E_\infty$ structure by work of Baker--Richter.  Is this also true of $K^{\Tate}$?  If so, it lends a lot of credibility to this Miller invariant calculation and its relation to $\tmf$.}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
