--- a/main.bib
+++ b/main.bib
@@ -5,7 +5,7 @@
 //
 // 1) if there are one or two authors, list their last names in alphabetical order (e.g., AndoStrickland).
 // 2) if there are three or more authors, list their last initials in alphabetical order (e.g., BCM).
-// 3) if these rules result in name collisions (e.g., the two Ando Hopkins Strickland papers), a short string related to the title of the paper should be appended with word-initial capitals (e.g., AHSHinfty and AHSTheoremOfTheCube).
+// 3) if these rules result in name collisions (e.g., the Ando Hopkins Strickland papers), a short string related to the title of the paper should be appended with word-initial capitals (e.g., AHSHinfty and AHSTheoremOfTheCube).
 //
 
 @book {AdamsBlueBook,
